components/Details/Details.module.css
.header {
  display: flex;
  align-items: center;
  width: 100%;
  padding: var(--m-1) 0;
  font-size: var(--fs-text-md);
  line-height: var(--lh-sm);
  font-weight: var(--fw-bold);
  text-align: left;
  color: var(--color-darkest);
  transition: background-color var(--t-interaction);
  border-top-left-radius: var(--r-default);
  border-top-right-radius: var(--r-default);
  cursor: pointer;

  &:hover,
  &:active,
  &:focus {
    color: var(--color-light-purple);
    outline: none;
  }

  &:hover .anchor {
    display: inline;
  }
}

.anchor {
  display: none;
  padding-right: var(--m-1);
  padding-left: var(--m-1);
  font-weight: var(--fw-regular);
  text-decoration: none;
  color: var(--color-light-gray);

  &:hover {
    color: var(--color-gray);
  }

  &::before {
    content: " ¶";
  }
}

.icon {
  flex-shrink: 0;
  margin: 0 var(--m-1);
  transform: rotate(0deg);
  transition: transform var(--t-fast);

  @media (--sm-scr) {
    width: 24px;
    height: 24px;
  }

  @media (--md-scr) {
    width: 16px;
    height: 16px;
  }
}

.description {
  display: flex;

  @media (--sm-scr) {
    flex-direction: column;
  }

  @media (--md-scr) {
    flex-direction: row;
  }
}

.title {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.meta {
  display: flex;
  align-items: center;
  flex-shrink: 0;
  margin-right: var(--m-1);

  @media (--sm-scr) {
    margin-top: var(--m-0-5);
  }

  @media (--md-scr) {
    margin-left: var(--m-1);
  }
}

.scopes {
  display: flex;
}

.scope {
  margin-right: var(--m-1);
  padding: 0 var(--m-1);
  font-size: var(--fs-text-xs);
  line-height: 20px;
  text-transform: uppercase;
  color: var(--color-gray);
  background-color: var(--color-lightest-gray);
  border-radius: var(--r-sm);

  .wrapper.opened & {
    color: var(--color-white);
    background-color: var(--color-dark-purple);
  }
}

.min {
  font-size: var(--fs-text-xs);
  line-height: 20px;
  font-weight: regular;
  color: var(--color-gray);
}

.body {
  display: none;
  overflow-x: auto;

  @media (--sm-scr) {
    padding: var(--m-1);
  }

  @media (--md-scr) {
    padding: var(--m-2);
  }
}

.wrapper {
  margin-bottom: var(--m-2);
  background-color: var(--color-white);
  border-radius: var(--r-default);

  &:last-child {
    margin-bottom: 0;
  }

  &.opened {
    box-shadow: 0 1px 4px rgba(0 0 0 / 24%);

    & .body {
      display: block;
    }

    & .icon {
      transform: rotate(180deg);
    }

    & .header {
      background-color: var(--color-lightest-gray);
    }
  }

  &.hidden {
    display: none;
  }
}

